@@ -5,10 +5,12 @@
     Resets the variant IDs in multiple SeqArray GDS files.
 }
 \usage{
-seqResetVariantID(gds.fn, set=NULL, digest=TRUE, optimize=TRUE, verbose=TRUE)
+seqResetVariantID(gds.fn, start=1L, set=NULL, digest=TRUE, optimize=TRUE,
+    verbose=TRUE)
 }
 \arguments{
     \item{gds.fn}{a character vector of multiple GDS file names}
+    \item{start}{the starting number of the sequence of variant IDs}
     \item{set}{\code{NULL} or a logical vector; \code{NULL} for resetting all
         files, or \code{TRUE} for resetting variant.id for that GDS file}
     \item{digest}{a logical value, if TRUE, add a md5 hash code}
@@ -21,7 +23,8 @@ seqResetVariantID(gds.fn, set=NULL, digest=TRUE, optimize=TRUE, verbose=TRUE)
 }
 \details{
     The variant IDs will be replaced by the numbers in sequential order and
-adjacent to each file. The variant ID starts from 1 in the first GDS file.
+adjacent to each file. The variant ID starts from \code{start} (1 by default)
+in the first GDS file.
 }
 
 \author{Xiuwen Zheng}
