@@ -5,6 +5,8 @@ UTILITIES
 
     o Tweak display in `seqResetVariantID()`
 
+    o new argument 'start' in `seqResetVariantID()`
+
 
 CHANGES IN VERSION 1.46.2
 -------------------------
